--- a/examples/rails/README.rdoc
+++ b/examples/rails/README.rdoc
@@ -4,7 +4,7 @@ The files in this directory allow you to run the default Rails app on
 MagLev.  Currently, MagLev is able to serve static and (simple) dynamic
 pages using a patched version of Rails 3 Beta 4.  The <tt>Rakefile</tt>
 provides tasks to setup your MagLev environment with the correct (patched)
-gems.
+Rails Gems and other gems.
 
 == Quick Start
 
@@ -30,9 +30,21 @@ features.
 
 === ActiveRecord
 
-Currently, ActiveRecord does not work.  We are working getting a worthy db
-driver. See the example for how to configure around loading of
-ActiveRecord. 
+Currently, ActiveRecord does not work, and we are working on fixes.  In the
+meantime, you must configure around ActiveRecord.  This has already been
+done for the +myapp+ in this directory.  To configure around ActiveRecord
+in another app, edit <tt>yourapp/config/application.rb</tt> and change:
+
+  require 'rails/all'
+
+to:
+
+  require 'rails'
+  # require 'active_record/railtie'
+  require 'action_controller/railtie'
+  require 'action_mailer/railtie'
+  require 'active_resource/railtie'
+  require 'rails/test_unit/railtie'
 
 === Slow start up
 
@@ -44,38 +56,41 @@ page.  The first pause is loading and compiling all the rails code:
   [2010-06-24 12:54:37] INFO  ruby 1.8.7 (2010-02-26) [x86_64-darwin]
   [2010-06-24 12:54:37] INFO  WEBrick::HTTPServer#start: pid=45167 port=3000
 
-The second pause occurs when you hit the first dynamic page.  Both of these
-pauses are due to MagLev parsing and compiling Ruby code.  Subsequent
-dynamic page loads should be much quicker, as MagLev only has to compile
-the code at startup.
+The second and thirs pauses occur when you hit the first static and first
+dynamic page.  All of these pauses are due to MagLev parsing and compiling
+Ruby code.  Subsequent dynamic page loads should be much quicker, as MagLev
+only has to compile the code once.  If you are running in development mode,
+you'll see a couple of files get reloaded for every page, but that should
+disappear if you run in production mode.
 
-If you are interested in seeing the progress of file loads, you can set the
-following environment variable before starting the Rails app:
-
-  export MAGLEV_OPTS="-MtraceLoad"
+If you are interested in seeing the progress of file loads, use the
+<tt>-MallIvsDynamic</tt> flag to <tt>maglev-ruby</tt> (you can set it on
+the command line, or in the <tt>MAGLEV_OPTS</tt> env variable).
 
 == Changes to +myapp+
 
 These are the changes to the standard sample app in order to run under
 MagLev:
 
-* The +rails+ script did not run under MagLev at the time +myapp+ was
-  created, so MRI 1.8.7 was used to create +myapp+ with the following
-  command:
+* The following command was used to create +myapp+:
+    $ $MAGLEV_HOME/bin/rails new myapp --database=mysql
 
-    $ ruby $MAGLEV_HOME/examples/rails/rails/bin/rails new myapp --dev
-
-  MagLev has since been fixed to run the +rails+ script.
-
-* <tt>myapp/Gemfile</tt> was tweaked to use <tt>ENV['MAGLEV_HOME']</tt> as
-  a path prefix and comment out the sqlite3 gem.
+* Edited <tt>myapp/Gemfile</tt> to use ruby-mysql gem.  Change <tt>gem
+  'mysql'</tt> to <tt>gem 'ruby-mysql', :require => 'mysql'</tt>.
 
 * <tt>myapp/config/application.rb</tt> was edited to replace <tt>require
   'rails/all'</tt> with a list of require statements, excluding
-  +ActiveRecord+. ActiveRecord doesn't seem to load under MagLev (we
-  suspect the root cause is that we don't have a worthy DB driver, rails
-  eats the exception, then continues loading, but not all pre-requisites
-  are loaded, due to swallowed exception).
+  +ActiveRecord+. ActiveRecord doesn't currently load under MagLev.
+
+* <tt>myapp/config/boot.rb</tt> was edited to work around {Trac
+  757}[https://magtrac.gemstone.com/ticket/757]. See the track report for
+  details on the workaround.
+
+* In order to get the "About your application's environment" link on the
+  index page to work, there has to be a route defined in
+  myapp/config/routes.rb.  The demo app has a route added, so the sample
+  URL should work. See
+  {Trac 766}[https://magtrac.gemstone.com/ticket/766].
 
 === Changes to Rails Code
 
@@ -106,3 +121,152 @@ To checkout MagLev patched fork of Rails, and run the app from that:
   $ rake gem:gems             # Installs required non-rails gems
   $ rake dev:checkout         # Checksout patched version of rails from GitHub
   $ rake dev:app              # Run myapp using ./rails version of rails.
+
+
+=== Progress towards full Rails Lifecycle
+
+The following steps are loosely based on the {Rails Blog
+Tutorial}[http://guides.rails.info/getting_started.html], and are what we
+are using to drive forward on getting rails working.
+
+1. Install rails: <tt>maglev-gem install rails --pre</tt> (works with patch)
+2. Create new rails app: <tt>$MAGLEV_HOME/bin/rails new blog</tt> (works)
+3. Run +bundle+: <tt>$MAGLEV_HOME/bin/bundle install</tt> (works)
+4. Create the database: <tt>$MAGLEV_HOME/bin/rake db:create</tt> (broken)
+5. Start server: <tt>$MAGLEV_HOME/bin/rails server</tt> (works)
+6. Load a static page: http://localhost:3000/ (works)
+7. Load a dynamic page: http://localhost:3000/rails/info/properties (works
+   with patch)
+8. Generate new controller: <tt>$MAGLEV_HOME/bin/rails generate controller
+   home index</tt> (works with workaround)
+9. Running a migrations: <tt>$MAGLEV_HOME/bin/rake db:migrate</tt>
+   (untested)
+10. Running the rails console: <tt>$MAGLEV_HOME/bin/rails console</tt>
+    (untested)
+
+The following sections explain details and current status for each step above.
+
+==== 1. Install rails: Works with patch.
+
+Rails installs from gems, but needs one patch.  To install the rails gems,
+you can (A) run <tt>rake init</tt>, or can do the following:
+
+Install non-rails gems:
+
+  $ maglev-gem install --no-ri --no-rdoc rack tzinfo i18n rack-mount erubis mail ruby-mysql
+  Successfully installed rack-1.2.1
+  Successfully installed tzinfo-0.3.22
+  Successfully installed i18n-0.4.1
+  Successfully installed rack-mount-0.6.9
+  Successfully installed abstract-1.0.0
+  Successfully installed erubis-2.6.6
+  Successfully installed activesupport-2.3.8
+  Successfully installed mime-types-1.16
+  Successfully installed polyglot-0.3.1
+  Successfully installed treetop-1.4.8
+  Successfully installed mail-2.2.5
+  Successfully installed ruby-mysql-2.9.3
+  12 gems installed
+
+Install rails gems:
+
+  $ maglev-gem install rails --pre --no-ri --no-rdoc
+  Successfully installed activesupport-3.0.0.beta4
+  Successfully installed builder-2.1.2
+  Successfully installed activemodel-3.0.0.beta4
+  Successfully installed rack-1.1.0
+  Successfully installed rack-test-0.5.4
+  Successfully installed actionpack-3.0.0.beta4
+  Successfully installed arel-0.4.0
+  Successfully installed activerecord-3.0.0.beta4
+  Successfully installed activeresource-3.0.0.beta4
+  Successfully installed actionmailer-3.0.0.beta4
+  Successfully installed rake-0.8.7
+  Successfully installed thor-0.13.7
+  Successfully installed railties-3.0.0.beta4
+  Successfully installed bundler-0.9.26
+  Successfully installed rails-3.0.0.beta4
+  15 gems installed
+
+Patch ActiveSupport:
+
+  $ cd $MAGLEV_HOME/lib/maglev/gems/1.8/gems/activesupport-3.0.0.beta4
+  $ patch -p2 < $MAGLEV_HOME/examples/rails/patches/active_support_1.diff
+  patching file lib/active_support/core_ext/class/subclasses.rb
+
+==== 2. Create new rails app: Works.
+
+Run:
+  $ $MAGLEV_HOME/bin/rails new myapp
+
+You should edit <tt>myapp/Gemfile</tt> and change the <tt>gem 'mysql'</tt>
+line to be:
+
+  gem 'ruby-mysql', :require => 'mysql'
+
+==== 3. Run +bundle+: Works.
+
+Run:
+  $ cd myapp
+  $ $MAGLEV_HOME/bin/bundle install
+
+==== 4. Create the database: Broken.
+
+The next step is to run:
+  $ $MAGLEV_HOME/bin/rake db:create
+
+But, the rake task does not even exist, since we are not requiring
+<tt>active_record/railtie</tt>. If you load active record, then MagLev gets
+the following error:
+
+  rake aborted!
+  NoMethodError: undefined method `attribute_method_suffix' for
+
+Once we resolve the ActiveRecord problem, we expect this task to start
+working.
+
+==== 5. Start server: Works.
+
+MagLev needs the <tt>-MallIvsDynamic</tt> option set in order to run
+Rails.  The most robust way to set this is through the <tt>MAGLEV_OPTS</tt>
+environment variable.  This will ensure the flag gets passed from the
++rails+ script onto <tt>maglev-ruby</tt>.
+
+You can start the server in a couple of ways.  The normal way to start a
+rails server (development) is:
+  $ export MAGLEV_OPTS="-MallIvsDynamic"
+  $ cd myapp
+  $ $MAGLEV_HOME/bin/rails server
+
+An alternate method is:
+
+  $ cd myapp
+  $ maglev-ruby -MallIvsDynamic script/rails server
+
+==== 6. Load a static page: Works.
+
+Static pages in the app load fine under MagLev.
+
+==== 7. Load a dynamic page: Works.
+
+Simple dynamic pages work fine under MagLev.  There is a slight problem
+with dynamic routes, unless some other route is defined in
+<tt>route.rb</tt>.
+
+==== 8. Generate new controller: Works with patch.
+
+<tt>myapp/config/boot.rb</tt> has been patched to work around
+{Trac 757}[https://magtrac.gemstone.com/ticket/757].   With the patch, you
+can run:
+  $ $MAGLEV_HOME/bin/rails generate controller home index
+
+and generate the expected files.
+
+==== 9. Running a migrations: Untested.
+
+Running <tt>$MAGLEV_HOME/bin/rake db:migrate</tt> is untested.
+
+==== 10. Running the rails console: untested
+
+Running <tt>$MAGLEV_HOME/bin/rails console</tt> is untested.
+
