--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 = MagLev Change Log
 
   For more precise details see: http://bit.ly/d3C6S1
+  Fix problems in Hash#delete, some optimizations in Hash.
 
 == Unreleased changes
 
