--- a/Changes
+++ b/Changes
@@ -1,11 +1,11 @@
 = MagLev Change Log
 
   For more precise details see: http://bit.ly/d3C6S1
-  Fix problems in Hash#delete, some optimizations in Hash.
 
 == Unreleased changes
 
-* Fix Trac 768, 769
+* Fix Trac 768, 769, 770
+* Fix problems in Hash#delete, some optimizations in Hash.
 
 == Changes for 23832  2010-07-16
 
