Update Rails README to reflect latest status: migrations now working.

--- a/examples/rails/README.rdoc
+++ b/examples/rails/README.rdoc
@@ -12,10 +12,14 @@ Rails Gems and other gems.
      $ cd $MAGLEV_HOME
      $ rake maglev:start      # or: $MAGLEV_HOME/bin/maglev start
 
-2. Install Rails, patch it and install other gems and set ENVIRONMENT
+2. Install Rails, patch it and install other gems and set ENVIRONMENT:
      $ cd $MAGLEV_HOME/examples/rails
      $ rake init
-     $ export MAGLEV_OPTS="-MallIvsDynamic"
+
+   Set ENVIRONMENT.  ActiveSupport and the MySQL driver both require
+   MagLev's <tt>-MallIvsDynamic</tt> option (i.e., most of the subsequent
+   steps):
+       $ export MAGLEV_OPTS="-MallIvsDynamic"
 
 3. Setup the Database.  MagLev currently supports MySQL, so:
    A. Ensure mysql is running
@@ -35,12 +39,10 @@ Rails Gems and other gems.
 There is still a lot of work before Rails on MagLev is fully cooked.  You
 should expect some spurious error messages and errors (especially in
 logging) that do not affect page loading.  We fully expect there to be
-other bugs as pages get more complex and as you add more gems use other
+other bugs as pages get more complex and as you add more gems and use other
 features.
 
-=== ActiveRecord
-
-ActiveRecord now seems to work well enough that we no longer patch it.
+The most notable problem is that routes are sometimes broken (defaults).
 
 === Slow start up
 
@@ -60,8 +62,8 @@ you'll see a couple of files get reloaded for every page, but that should
 disappear if you run in production mode.
 
 If you are interested in seeing the progress of file loads, use the
-<tt>-MallIvsDynamic</tt> flag to <tt>maglev-ruby</tt> (you can set it on
-the command line, or in the <tt>MAGLEV_OPTS</tt> env variable).
+<tt>-MtraceLoad</tt> flag to <tt>maglev-ruby</tt> (you can set it on
+the command line, or add it to the <tt>MAGLEV_OPTS</tt> env variable).
 
 == Changes to +myapp+
 
@@ -100,27 +102,32 @@ discussion of <tt>-MallIvsDynamic</tt>.
 === Progress towards full Rails Lifecycle
 
 The following steps are loosely based on the {Rails Blog
-Tutorial}[http://guides.rails.info/getting_started.html], and are what we
-are using to drive forward on getting rails working.
+Tutorial}[http://guides.rails.info/getting_started.html]. We are using
+these steps to drive forward on getting Rails working. Assuming you've
+patched ActiveSupport as described above, and you apply the patch to the
+generated app (as described in step 2), then this is the current status:
 
-1. Install rails: <tt>maglev-gem install rails --pre</tt> (works with patch)
+1. Install rails: <tt>maglev-gem install rails --pre</tt> (works)
 2. Create new rails app: <tt>$MAGLEV_HOME/bin/rails new blog</tt> (works)
 3. Run +bundle+: <tt>$MAGLEV_HOME/bin/bundle install</tt> (works)
 4. Create the database: <tt>$MAGLEV_HOME/bin/rake db:create</tt> (works)
 5. Start server: <tt>$MAGLEV_HOME/bin/rails server</tt> (works)
 6. Load a static page: http://localhost:3000/ (works)
-7. Load a dynamic page: http://localhost:3000/rails/info/properties (works
-   with patch)
+7. Load a dynamic page: http://localhost:3000/rails/info/properties (works;
+   but needs at least one route in <tt>routes.rb</tt>)
 8. Generate new controller: <tt>$MAGLEV_HOME/bin/rails generate controller
-   home index</tt> (works with workaround)
-9. Running a migrations: <tt>$MAGLEV_HOME/bin/rake db:migrate</tt>
-   (untested)
+   home index</tt> (works)
+9. Running a migrations: <tt>$MAGLEV_HOME/bin/rake db:migrate</tt> (works)
 10. Running the rails console: <tt>$MAGLEV_HOME/bin/rails console</tt>
     (untested)
+11. Run application unit tests (untested)
+
+Once the basic life-cycle works, we plan on getting the Rails Specs to
+pass.
 
 Detailed explanations of each step follow.
 
-==== 1. Install rails: Works with patch.
+==== 1. Install rails: Works
 
 Rails installs from gems, but needs one patch.
 
@@ -164,8 +171,9 @@ Install rails gems:
   Successfully installed rails-3.0.0.beta4
   15 gems installed
 
-Patch ActiveSupport:
-
+To patch ActiveSupport, you can either do:
+  $ rake patch:activesupport
+or:
   $ cd $MAGLEV_HOME/lib/maglev/gems/1.8/gems/activesupport-3.0.0.beta4
   $ patch -p2 < $MAGLEV_HOME/examples/rails/patches/active_support_1.diff
   patching file lib/active_support/core_ext/class/subclasses.rb
@@ -177,12 +185,10 @@ finding all subclasses currently loaded in a VM.  The ActiveSupport file
 already has patches for Rubinius and JRuby.  We expect to submit this patch
 to Rails.
 
-==== 2. Create new rails app: Works, but must patch app files.
+==== 2. Create new rails app: Works, but then must patch app files.
 
 Run:
   $ $MAGLEV_HOME/bin/rails new myapp --database=mysql
-  $ cp $MAGLEV_HOME/examples/rails/patches/app_config_boot_Trac757.rb myapp/config/boot.rb
-  <edit myapp/Gemfile>
 
 The new app is correctly built, but there are two items that need to be
 upated in the new app.
@@ -190,6 +196,8 @@ upated in the new app.
 1. Copy the patched version of <tt>boot.rb</tt> into your application.
    This is a work-around for  {Trac
    757}[https://magtrac.gemstone.com/ticket/757].
+       $ cp $MAGLEV_HOME/examples/rails/patches/app_config_boot_Trac757.rb myapp/config/boot.rb
+
 2. Edit <tt>myapp/Gemfile</tt> and change:
      gem 'mysql'
    to:
@@ -236,22 +244,35 @@ Simple dynamic pages work fine under MagLev.  There is a slight problem
 with the default rails info routes, if no routes are defined in
 <tt>route.rb</tt>.  Workaround is to add some route or other.
 
-==== 8. Generate new controllers and scaffolding: Works with patch.
+==== 8. Generate new controllers and scaffolding: Works (but resource
+routes break routing)
 
 With the patch <tt>boot.rb</tt> patch described above, you can run:
   $ $MAGLEV_HOME/bin/rails generate controller home index
 and generate the expected files.
 
+If you remove <tt>public/index.html</tt> and add <tt>root :to =>
+"home#index"</tt> into <tt>config/routes.rb</tt>, you should be able to hit
+http://localhost:3000/ and see <tt>home#index</tt>
+
 You can also create scaffolding:
   $ $MAGLEV_HOME/bin/rails generate scaffold Post name:string title:string content:text
+Unfortunately, this adds <tt>resources :posts</tt> to <tt>routes.rb</tt>,
+and that seems to break the other routes...
 
-==== 9. Running a migrations: Untested.
+==== 9. Running a migrations: Works.
 
-Running <tt>$MAGLEV_HOME/bin/rake db:migrate</tt> is untested.
+Assuming you've generated the scaffolding in the previous step, you can do:
+  $ $MAGLEV_HOME/bin/rake db:migrate
+which seems to work.
 
 ==== 10. Running the rails console: untested
 
 Running <tt>$MAGLEV_HOME/bin/rails console</tt> is untested.
+
+==== 11. Running the tests: untested
+
+Running the application's unit tests has not yet been tested.
 
 == Alternate rails patch option (deprecated)
 
