speedup of eval

--- a/Changes
+++ b/Changes
@@ -6,6 +6,7 @@
 
 * Fix Trac 768, 769, 770, 771
 * Fix problems in Hash#delete, some optimizations in Hash.
+* Some speedup of eval.
 
 == Changes for 23832  2010-07-16
 
