--- a/Changes
+++ b/Changes
@@ -4,8 +4,9 @@
 
 == Unreleased changes
 
-* Fix Trac 773
-* Fix result checking of Iconv.create in iconv.rb
+* Fix Trac 773, 775
+* Fix result checking of Iconv.create in iconv.rb (fixes Trac 774)
+* Fix various spec failures in URI, Dir, Env, File, Integer#times .
 
 == Changes for 23913  2010-07-28
 
