--- a/Changes
+++ b/Changes
@@ -2,11 +2,13 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
-== Unreleased changes
+== Changes for 23980  2010-08-06
 
 * Fix Trac 773, 775
 * Fix result checking of Iconv.create in iconv.rb (fixes Trac 774)
 * Fix various spec failures in URI, Dir, Env, File, Integer#times .
+* Fairly extensive fixes and changes to the underlying GemStone 3.0 system
+* Daniels Starling's latest KD-Tree update
 
 == Changes for 23913  2010-07-28
 
