--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
 == Unreleased changes
 
 * Fix Trac 778
+* Support for running Rails 3.0.0.rc (previous support was for 3.0.0.beta4)
 
 == Changes for 23981  2010-08-06
 
