--- a/Changes
+++ b/Changes
@@ -6,8 +6,13 @@
 
 == Changes for 24027  2010-08-11
 
-* Fix Trac 778
 * Support for running Rails 3.0.0.rc (previous support was for 3.0.0.beta4)
+* Fix Trac 778, 779
+* Fix file,line args to eval
+* Fix bug in File#expand_path
+* Dir[] now allows multiple patterns
+* Fixed some bugs in YAML/Psych
+* Extensive fixes and updates to the underlying GemStone 3.0 system
 
 == Changes for 23981  2010-08-06
 
