--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
-== Unreleased changes
+== Changes for 24125  2010-08-23 
 
 * Fix Trac 781, 782
 
