--- a/Changes
+++ b/Changes
@@ -2,6 +2,8 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
+* Fix Trac 786
+
 == Changes for 24192 2010-09-02
 
 * Update examples/rails from Rails 3.0.0.rc to Rails 3.0.0 final.
