--- a/Changes
+++ b/Changes
@@ -2,7 +2,12 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
+== Changes for 24207 2010-09-08
+
+* Added support for Rails 3.0.0
+* Fix bug where Marshal::TYPE_IVAR was being modified during object serialization
 * Fix Trac 786
+* Many fixes and improvements to the underlying GemStone 3.0 system
 
 == Changes for 24192 2010-09-02
 
