Updated Changes file.

--- a/Changes
+++ b/Changes
@@ -4,6 +4,8 @@
 
 == Unreleased Changes
 
+* Added -C and -X options to maglev-ruby.
+
 == Changes for 24222 2010-09-09
 
 * Fixed problem creating indexes when running under RVM.
