--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
-== Unreleased Changes
+== Changes for 24294 2010-09-22
 
 * Added -C and -X options to maglev-ruby.
 
