--- a/Changes
+++ b/Changes
@@ -2,6 +2,11 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
+* New parser based on the melbourne grammar file from Rubinius ,
+  with grammar actions calling to methods in Smalltalk.
+  MRI parse server no longer required for loading Ruby bootstrap code.
+* Fix Trac 787, 791
+
 == Changes for 24294 2010-09-22
 
 * Added -C and -X options to maglev-ruby.
