--- a/Changes
+++ b/Changes
@@ -2,13 +2,12 @@
 
   For more precise details see: http://bit.ly/d3C6S1
 
+== Unreleased Changes
+
 * New parser based on the melbourne grammar file from Rubinius ,
   with grammar actions calling to methods in Smalltalk.
   MRI parse server no longer required for loading Ruby bootstrap code.
 * Fix Trac 697, 701, 784, 787, 791
-
-== Changes for 24294 2010-09-22
-
 * Added -C and -X options to maglev-ruby.
 
 == Changes for 24222 2010-09-09
