--- a/Changes
+++ b/Changes
@@ -7,7 +7,7 @@
 * New parser based on the melbourne grammar file from Rubinius ,
   with grammar actions calling to methods in Smalltalk.
   MRI parse server no longer required for loading Ruby bootstrap code.
-* Fix Trac 697, 701, 784, 787, 788, 790, 791
+* Fix Trac 697, 701, 784, 787, 788, 790, 791, 795
 * Added -C and -X options to maglev-ruby.
 
 == Changes for 24222 2010-09-09
